2009-04-08  Atsushi Enomoto  <atsushi@ximian.com>

	* IdentityElement.cs, NetPeerTcpBindingElement.cs: implemented
	  OnApplyConfiguration().

2009-04-07  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlDictionaryReaderQuotasElement.cs, NetTcpBindingElement.cs:
	  implement OnApplyConfiguration().

2008-04-22  Igor Zelmanovich <igorz@mainsoft.com>

	* ServiceDebugElement.cs:
	implement CreateBehavior method.
	
2008-04-03  Igor Zelmanovich <igorz@mainsoft.com>

	* ServiceModelExtensionCollectionElement.cs:
	implement this[int index] api.
	
2008-04-01  Igor Zelmanovich <igorz@mainsoft.com>

	* ServiceEndpointElementCollection.cs: fix GetElementKey().
	
2008-03-31  Vladmir Krasnov  <vladmimir@mainsoft.com>

	* ConfigUtil.cs: fixed CreateBinding
	* BasicHttpBindingElement.cs: OnApplyConfiguration
	* StandardBindingElement.cs: implemented ApplyConfiguration

2008-03-27  Igor Zelmanovich <igorz@mainsoft.com>

	* XmlElementElementCollection.cs:
	* XmlElementElement.cs:
	* WSFederationHttpBindingElement.cs:
	* WSDualHttpBindingElement.cs:
	* WindowsStreamSecurityElement.cs:
	* UseManagedPresentationElement.cs:
	* TransportElement.cs:
	* TransactionFlowElement.cs:
	* TextMessageEncodingElement.cs:
	* TcpTransportElement.cs:
	* TcpConnectionPoolSettingsElement.cs:
	* StandardBindingReliableSessionElement.cs:
	* SslStreamSecurityElement.cs:
	* SecurityElementBase.cs:
	* SecurityElement.cs:
	* ReliableSessionElement.cs:
	* PrivacyNoticeElement.cs:
	* PnrpPeerResolverElement.cs:
	* PeerTransportElement.cs:
	* OneWayElement.cs:
	* NetPeerTcpBindingElement.cs:
	* NetMsmqBindingElement.cs:
	* NamedPipeTransportElement.cs:
	* NamedPipeConnectionPoolSettingsElement.cs:
	* MtomMessageEncodingElement.cs:
	* MsmqTransportElement.cs:
	* MsmqIntegrationElement.cs:
	* MsmqIntegrationBindingElement.cs:
	* MsmqElementBase.cs:
	* MsmqBindingElementBase.cs:
	* MethodStubs.cs:
	* MessageSecurityOverMsmqElement.cs:
	* LocalServiceSecuritySettingsElement.cs: