@@ -1,3 +1,7 @@
+2009-09-30  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* ChannelFactory.cs : use ConfigUtil to get config sections.
+
 2009-09-29  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* ClientProxyGenerator.cs : fix wrong parameter number for async
